[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diskimage_explorer_x68k"
version = "0.1.0"
description = "GUI editor for X68000 HDF/HDS/XDF disk images"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7",
  "pyfatfs>=1.1.0",
  "charset-normalizer>=3.3",
  "setuptools<81",
]

[project.scripts]
diskimage_explorer_x68k = "diskimage_explorer_x68k.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
